Fixing margins for better alignment.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -95,12 +95,10 @@ a {
 
 .image-content.earth {
   background-image: url(../images/img-story-2.png);
-  margin-top: 40px;
 }
 
 .image-content.camera {
   background-image: url(../images/img-story-3.png);
-  margin-top: 40px;
 }
 
 .image-content.cat {
@@ -127,10 +125,12 @@ a {
 
 p {
   font-size: 17px;
+  margin-bottom: 50px;
 }
 
 h2 {
   font-size: 30px;
+  margin-top: 0;
 }
 
 .news-bites {
